<resources>
    <string name="app_name">BlackJack</string>
    <string name="intro">Welcome To</string>
    <string name="butt1">Begin</string>
    <string name="butt2">How To Play</string>
    <string name="butt3">Credits</string>
    <string name="backButt">Back</string>
    <string name="developers">Michael Cha and Bradley Wilcox</string>
    <string name="devops">Developers:</string>
    <string name="draw">Hit</string>
    <string name="stand">Stand</string>
    <string name="reset">Reset</string>
    <string name="quit">Quit</string>
    <string name="player">Player 1</string>
    <string name="dealer">Dealer</string>
    <string name="empty"> </string>
    <string name="object"><b>Object of the Game</b>\nEach participant attempts to beat the dealer
        by getting a count as close to 21 as possible, without going over 21.\n\n<b>Card Values/Scoring</b>\n
    It is up to each individual player if an ace is worth 1 or 11. Face cards are 10 and any other card is its pip value.\n\n
    <b>Betting</b>\nBefore the deal begins, each player places a bet, in chips, in front of him in the designated area
        Minimum and maximum limits are established on the betting, and the general limits are from $1 to $500.</string>

</resources>
