<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:text="@string/player"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:id="@+id/textView6" />

    <TextView
        android:text="@string/dealer"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/empty"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="17dp"
        android:id="@+id/textView2" />


    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="207dp"
        android:id="@+id/tvPlayerHand" />

    <Button
        android:text="@string/quit"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button4"
        android:layout_alignBottom="@+id/btnStand"
        android:layout_toRightOf="@+id/button4"
        android:layout_marginLeft="15dp"
        android:id="@+id/button5" />


    <TextView
        android:text="@string/empty"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <Button
        android:text="@string/draw"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginRight="10dp"
        android:id="@+id/btnHit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="79dp"
        android:id="@+id/tvDealerHand"
        android:layout_above="@+id/tvPlayerHand"
        android:layout_alignLeft="@+id/tvPlayerHand"
        android:layout_alignStart="@+id/tvPlayerHand" />

    <Button
        android:text="@string/stand"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnStand"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/btnHit"
        android:layout_alignBottom="@+id/btnHit"
        android:layout_toRightOf="@+id/btnHit"
        android:layout_toEndOf="@+id/btnHit" />


    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:id="@+id/textView4" />

    <Button
        android:text="@string/reset"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_alignBaseline="@+id/btnStand"
        android:layout_alignBottom="@+id/btnStand"
        android:layout_toRightOf="@+id/btnStand"
         />


</RelativeLayout>