<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gametable">

    <Button
        android:text="@string/backButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:id="@+id/htbutton" />

    <TextView
        android:text="@string/object"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/htView2"
        android:layout_below="@+id/htView"
        android:layout_alignLeft="@+id/htView"
        android:layout_alignStart="@+id/htView" />

    <TextView
        android:text="@string/butt2"
        android:textStyle="bold"
        android:textSize="70px"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/htView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>